added more mem atlas

--- a/atlas_config.yaml
+++ b/atlas_config.yaml
@@ -195,6 +195,7 @@ rename_mags_contigs: true        #Rename contigs of representative MAGs
 #######################
 
 annotations:
+- gtdb_taxonomy
 
 
 ########################
