snakefiles for taxonomy and CARD

--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,18 @@ databases/
 fasterq.tmp*/
 sourmash/fastgather/
 sourmash/gather_out/
+sourmash/MAG_taxonomy/
 sourmash/*.csv
 README.md
-sourmash_old/
 votu_smash/
 bowtie2/check/
 bowtie2/filter_bam/
 bowtie2/mapping/
 bowtie2/*.bt2
 bowtie2/*.csv
+card/information_sequences
+card/nucl
+card/ontology
+card/protein
+card/test_MAGs
+card/*.txt
