--- a/atlas_config.yaml
+++ b/atlas_config.yaml
@@ -154,13 +154,12 @@ minimum_map_quality: 0
 # Binning
 ########################
 
-final_binner: DASTool             # [SemiBin, DASTool, vamb, maxbin]
+final_binner: vamb             # [SemiBin, DASTool, vamb, maxbin]
 
-binner:                           # If DASTool is used as final_binner, use predictions of this binners
-- metabat
-- maxbin
-#  - vamb
-
+# binner:                           # If DASTool is used as final_binner, use predictions of this binners
+# - metabat
+# - maxbin
+# #  - vamb
 
 metabat:
   sensitivity: sensitive
