--- a/AMRfinder/Snakefile
+++ b/AMRfinder/Snakefile
@@ -1,40 +1,39 @@
 # set the list of files
-SAMPLE, = glob_wildcards('../atlas/protfiles/{filename}.faa')
+SAMPLE, = glob_wildcards('../sourmash/sig_files/vOTU_fasta/highqual/split_1/{filename}.fa')
 DB_AMR = '/home/amhorst/mambaforge/envs/amrfinderplus/share/amrfinderplus/data/2023-11-15.1/'
 
 
 # final output
 rule all:
     input:
-        expand('AMRFINDER_result/{filename}.tsv', filename=SAMPLE),
-        expand('AMRFINDER_result/{filename}.nucl.tsv', filename=SAMPLE),
-    
+        expand('AMRFINDER_result/{filename}.tsv', filename=SAMPLE),    
+
+
+# run prodigal to predict proteins for AMRfinder
+rule prodigal:
+    input:
+       fa='../sourmash/sig_files/vOTU_fasta/highqual/split_1/{sample}.fa',
+    output:
+        faa=touch('prot_files/{sample}.faa'),
+    conda: 
+        "prodigal.yml"
+    threads: 1
+    shell:
+        """
+        prodigal -q -i {input.fa} -a {output.faa} -p meta
+        """
 
 # run amrfinder using x threads against protein. (HMM + blastp)
 rule amrfinder:
     input:
-       faa='../atlas/protfiles/{ident}.faa',
+       faa='prot_files/{sample}.faa',
     output:
-        csv=touch('AMRFINDER_result/{ident}.tsv'),
+        csv=touch('AMRFINDER_result/{sample}.tsv'),
     conda: 
         "amrfinder.env.yml"
     threads: 1
     shell:
         """
         amrfinder -p {input.faa} --threads {threads} \
-        -o {output.csv} --plus --database {DB_AMR}
-        """
-# run amrfinder using x threads against protein. (HMM + blastp)
-rule amrfinder_n:
-    input:
-       fna='../atlas/protfiles/{nuclfile}.fna',
-    output:
-        csv=touch('AMRFINDER_result/{nuclfile}.nucl.tsv'),
-    conda: 
-        "amrfinder.env.yml"
-    threads: 1
-    shell:
-        """
-        amrfinder -p {input.fna} --threads {threads} \
         -o {output.csv} --plus --database {DB_AMR}
         """
