add branchwater env

--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,5 @@
 .snakemake
 logs/
-reads/
-sra/
-atlas/
-ref/
-checks/
-virsorter2/
-fasterq.tmp*/
-err/
-out/
-databases/
-fasterq.tmp*/
-sourmash/fastgather/
-sourmash/gather_out/
-sourmash/MAG_taxonomy/
-sourmash/*.csv
-README.md
-votu_smash/
-bowtie2/check/
-bowtie2/filter_bam/
-bowtie2/mapping/
-bowtie2/*.bt2
-bowtie2/*.csv
-card/information_sequences
-card/nucl
-card/ontology
-card/protein
-card/test_MAGs
-card/*.txt
-card/MAG*
-card/concat*
-AMRfinder/AMRFINDER_result/
-AMRfinder/prot_files/
-card/virs/ 
-smash_abund/
-sourmash/votus/
-sourmash/sketch_vOTUs/
-sourmash/viral_taxonomy/
-sourmash/subtract/
-
-sourmash/mgmanysearch/
-sourmash/sig_files/
-bowtie2/
-sourmash/manifests/
-fed_operon/
-pangenome/ncbi_dataset/
-pangenome/own_MAGs
-pangenome/ref_genomes
-pangenome/gff
-pangenome/prokka
-pangenome/sourmash_db-cover
 results/
-pangenome
-resources
-workflow
+err/
+resources/
